<resources>
    <string name="app_name">CatalogoATC</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="sin_conexion">Sin conexión</string>

    <!-- Revisar si estas lieneas de texto estan siendo usadas-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_geolocalizador">Map</string>
    <string name="title_activity_geolocalizacion">Map</string>
    <string name="title_activity_localizacion">Map</string>
    <string name="title_activity_maps_localizacion">Map</string>


    <!-- Texto usado dentro del XML fragment_buzon-->
    <string name="titulo_caja_comentarios">Comentarios</string>
    <string name="titulo_carrito">Carrito</string>
    <string name="texto_caja_comentarios">Para nosotros tu opinión es muy importante, por favor déjanos tus comentarios.</string>


    <string name="texto_compras_contado">Compras al Contado</string>

    <string name="texto_total_a_pagar">Total a pagar:</string>
    <string name="texto_total">Total:</string>


    <!-- Texto Generico-->
    <string name="texto_nombre">Nombre:</string>
    <string name="texto_direccion">Dirección:</string>
    <string name="texto_telefono">Teléfono:</string>
    <string name="texto_fecha">Fecha</string>
    <string name="texto_folio">Folio</string>
    <string name="texto_estado">Estado</string>
    <string name="texto_articulo">Articulo</string>
    <string name="texto_marca">Marca:</string>
    <string name="texto_modelo">Modelo:</string>
    <string name="texto_precio">Precio:</string>
    <string name="texto_existencia">Existencia:</string>
    <string name="boton_agregar">Agregar</string>
    <string name="boton_articulo">Articulo</string>
    <string name="texto_cantidad">Cantidad:</string>
    <string name="texto_tipo">Tipo</string>
    <string name="texto_eliminar">Eliminar</string>
    <string name="texto_detalles">Detalles</string>
    <string name="texto_creditos">Creditos</string>


    <!-- Texto Generico-->
    <string name="texto_catalogo">Catalogo</string>
    <string name="texto_clientes">Clientes</string>
    <string name="texto_historial">Historial</string>


</resources>
