<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtFolio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margen_izquierda"
        android:layout_marginTop="@dimen/margen_margin"
        android:text="@string/texto_folio"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/titulos_H1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margen_izquierda"
        android:layout_marginRight="@dimen/margen_izquierda"
        android:layout_marginTop="@dimen/margen_entre_texto"
        android:text="@string/texto_fecha"
        android:textColor="@color/secondarText"
        android:textSize="@dimen/texto_mediano" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margen_izquierda"
        android:layout_marginTop="@dimen/margen_entre_texto"
        android:text="@string/texto_total"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/texto_mediano" />
</LinearLayout>
