<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xml:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.adi.catalogoatc.fragmentos.PerfilFragment">


            <ImageView
                android:id="@+id/idImagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margen_margin"
                android:layout_gravity="center"
                android:src="@drawable/usuario" />


            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margen_margin"
                android:hint="@string/texto_nombre"
                android:textSize="@dimen/titulos_H1"
                android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:id="@+id/car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margen_derecha"
        android:layout_marginStart="@dimen/margen_izquierda"
        app:cardBackgroundColor="@android:color/background_light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_direccion"
                android:id="@+id/txtTituloDireccion"
                android:textSize="@dimen/texto_generico"
                android:layout_marginStart="@dimen/margen_izquierda"
                android:textStyle="bold"
            />

             <TextView
                android:id="@+id/txtDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTituloDireccion"
                android:layout_marginStart="@dimen/margen_izquierda"
                android:text="@string/sin_conexion"
                android:textSize="@dimen/texto_generico" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_telefono"
                android:id="@+id/txtTelefonoTitulo"
                android:textSize="@dimen/texto_generico"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/margen_izquierda"
                android:layout_below="@+id/txtDireccion"
                />


            <TextView
                android:id="@+id/txtTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTelefonoTitulo"
                android:text="@string/sin_conexion"
                android:layout_marginStart="@dimen/margen_izquierda"
                android:textSize="@dimen/texto_generico" />


            <ImageButton
                android:id="@+id/btnEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/editar"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
