<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margen_margin"
        android:elevation="@dimen/elevacion_card"
        android:padding="5dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="5dp"
                app:srcCompat="@drawable/catalogo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="11dp"
                android:layout_marginStart="11dp"
                android:layout_toEndOf="@+id/ivImage"
                android:layout_toRightOf="@+id/ivImage"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/txtTipo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_tipo"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/texto_generico"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/txtMarca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_marca"
                    android:textSize="@dimen/texto_generico"
                    android:textStyle="normal|bold"
                    android:textColor="@color/primaryText"/>

                <TextView
                    android:id="@+id/txtModelo"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:textColor="@color/primaryText"
                    android:text="@string/texto_modelo"

                    />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ivImage">

                <TextView
                    android:id="@+id/txtPrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/btnRemove"
                    android:layout_alignBottom="@+id/btnRemove"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="22dp"
                    android:layout_marginRight="22dp"
                    android:text="@string/texto_precio"
                    android:textColor="@color/primaryText"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/btnRemove"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:elevation="4dp"
                    android:fontFamily="sans-serif"
                    android:padding="5dp"
                    android:text="@string/texto_eliminar"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="17dp"
                    android:layout_marginStart="17dp"
                    android:layout_toEndOf="@+id/btnRemove"
                    android:layout_toRightOf="@+id/btnRemove"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/qty_decrease"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_weight="1"
                        android:elevation="4dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/restar" />

                    <TextView
                        android:id="@+id/edQty"
                        android:layout_width="50dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0"
                        android:ems="10"
                        android:inputType="number"
                        android:text="1"
                        android:textAlignment="center"
                        android:textColor="@color/primaryText"
                        android:textSize="12sp" />

                    <ImageButton
                        android:id="@+id/qty_increase"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_weight="1"
                        android:elevation="4dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/sumar" />

                </LinearLayout>


            </RelativeLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>